--- a/hair-helper/package.json
+++ b/hair-helper/package.json
@@ -10,8 +10,11 @@
   },
   "dependencies": {
     "@auth0/nextjs-auth0": "^3.5.0",
+    "cheerio": "^1.0.0",
     "dotenv": "^16.4.5",
     "next": "14.2.13",
+    "puppeteer": "^23.5.0",
+    "puppeteer-core": "^23.5.0",
     "react": "^18",
     "react-dom": "^18"
   },
