--- a/hair-helper/package.json
+++ b/hair-helper/package.json
@@ -13,12 +13,14 @@
     "cheerio": "^1.0.0",
     "dotenv": "^16.4.5",
     "next": "14.2.13",
-    "puppeteer": "^23.5.0",
+    "puppeteer": "^23.5.1",
     "puppeteer-core": "^23.5.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "swr": "^2.2.5"
   },
   "devDependencies": {
+    "@sparticuz/chromium": "^129.0.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
