--- a/hair-helper/package.json
+++ b/hair-helper/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "@auth0/nextjs-auth0": "^3.5.0",
+    "@nextui-org/react": "^2.4.8",
     "cheerio": "^1.0.0",
     "dotenv": "^16.4.5",
+    "framer-motion": "^11.11.17",
     "next": "14.2.13",
     "react": "^18",
     "react-dom": "^18",
