--- a/hair-helper/package.json
+++ b/hair-helper/package.json
@@ -10,13 +10,14 @@
   },
   "dependencies": {
     "@auth0/nextjs-auth0": "^3.5.0",
+    "@heroui/react": "^2.7.10",
     "@nextui-org/react": "^2.4.8",
     "cheerio": "^1.0.0",
     "dotenv": "^16.4.5",
-    "framer-motion": "^11.11.17",
+    "framer-motion": "^12.18.1",
     "next": "14.2.13",
-    "react": "^18",
-    "react-dom": "^18",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
     "swr": "^2.2.5"
   },
   "devDependencies": {
@@ -27,6 +28,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.13",
     "postcss": "^8",
+    "prettier": "3.6.2",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
